--- a/dbp/chat.html
+++ b/dbp/chat.html
@@ -7,10 +7,9 @@
     <link type="text/css" href="raios.css" rel="stylesheet">
 </head>
 <script type="text/javascript">
-	function enviar(){
-		document.getElementById("ch").innerHTML = "Hola prro";
-			
-	}
+function enviar(){
+	document.getElementById("ch").innerHTML = document.getElementById("env").value;
+}
 </script>
 <body>
 <div class="chatbox">
@@ -22,16 +21,20 @@
 		</div>
 		<div class ="chat self">
 			<div class="user-photo"><img src="carl.png"></div>
-			<p id="ch"class="chat-message">Hey</p>
+			<p class="chat-message">Hey</p>
 		</div >
 		<div class ="chat friend">
 			<div class="user-photo"><img src="usuario1.jpg"></div>
 			<p class="chat-message">q haces Carrlll</p>
 		</div>
+		<div class ="chat self">
+			<div class="user-photo"><img src="carl.png"></div>
+			<p id="ch" class="chat-message"></p>
+		</div>
 		
 	</div>
 	<div id="chat-form"class="chat-form">
-		<textarea></textarea>
+		<textarea id="env"></textarea>
 		<button onclick="enviar()">Enviar</button>
 	</div>
 </div>
