--- a/dbp/registro.html
+++ b/dbp/registro.html
@@ -96,7 +96,7 @@ function registrarNuevoUsuario() {
 		</div>
 		<br>
 		<div class="input">
-			<button type="submit" onclick="registrarNuevoUsuario()">Iniciar Sesión</button>
+			<button type="submit" onclick="registrarNuevoUsuario()">Registrar</button>
 		</div>
 		<p>
 			Ya tiene cuenta? <a href="index.html">Iniciar Sesión</a>
